--- a/sta-api/src/main/resources/application.yml
+++ b/sta-api/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
