fix(config): comment spring security credentials in application.yml

--- a/sta-api/src/main/resources/application.yml
+++ b/sta-api/src/main/resources/application.yml
@@ -61,10 +61,10 @@ spring:
             required: true
     verify:
       host: ${VERIFY_EMAIL_HOST}
-  security:
-    user:
-      name: user
-      password: test
+#  security:
+#    user:
+#      name: user
+#      password: test
 #  h2:
 #    console:
 #      enabled: true
