feat(api): add jwt token variable to yml files

--- a/sta-api/src/main/resources/application-dev.yml
+++ b/sta-api/src/main/resources/application-dev.yml
@@ -15,3 +15,6 @@ EMAIL_PORT: 587
 EMAIL_ID:
 EMAIL_PASSWORD:
 VERIFY_EMAIL_HOST: http://localhost:8085
+
+JWT_EXPIRATION: 432_000_000 #5 days
+JWT_SECRET: ${SECRET}
