--- a/sta-api/src/main/resources/application.yml
+++ b/sta-api/src/main/resources/application.yml
@@ -91,3 +91,8 @@ logging:
     org.hibernate.sql: trace
     org.hibernate.orm.jdbc.bind: trace
 
+
+jwt:
+  expiration: ${JWT_EXPIRATION}
+  secret: ${JWT_SECRET}
+
