--- a/sta-api/src/main/resources/application-prod.yml
+++ b/sta-api/src/main/resources/application-prod.yml
@@ -15,3 +15,6 @@ EMAIL_PORT: 587
 EMAIL_ID: test@gmail.com
 EMAIL_PASSWORD: test1234
 VERIFY_EMAIL_HOST: http://locahost:8085
+
+JWT_EXPIRATION: 432_000_000 #5 days
+JWT_SECRET: ${SECRET}
